--- a/app/assets/stylesheets/components/_variables.scss
+++ b/app/assets/stylesheets/components/_variables.scss
@@ -125,7 +125,7 @@ $header-blue:        rgb(6,32,56);
 $search-button-blue: rgb(16,51,102);
 $footer-text-color:  #eef2f8;
 $anchor-color:       rgb(80,146,248);
-$search-green:       rgb(32,138,155);
+$search-green:       #a7dce4;
 $light-green:        rgb(167,220,228);
 $button-red:         rgb(209,60,58);
 $dark-gray:          #818181;
